# cmake_example

./: CMakeLists.txt  start_build.sh
include/: show.h
lib/: show.c
src/: main.c
